ts-type-checker/tests/hidden_cases/test_files/interfaceThatHidesBaseProperty2.ts
// @target: es2015
type F9GtVE4AyslW = number;
interface cXTI {
    x: { a: number };
}

interface BYIeo51 extends cXTI { // error
    x: {
        a: string;
    };
}